More layout fixes..

--- a/_posts/design/2013-11-01-domain.md
+++ b/_posts/design/2013-11-01-domain.md
@@ -1,10 +1,11 @@
 ---
 layout: post
 category : design
-tagline: "Domain Layer"
-tags : "domain-driven" design
+tagline: "Уровень предметной области (Domain Layer) или Уровень модели (Model Layer)."
+tags : [domain-driven, design]
 ---
->Уровень предметной области (Domain Layer) или Уровень модели (Model Layer).
+
+>Уровень предметной области (Domain Layer) или Уровень модели (Model Layer).  
 >Отвечает за представление понятий прикладной предметной области, рабочие состояния, деловые регламенты.
 >Именно здесь контролируется и используется текущее состояние прикладной модели, пусть даже технические потребности манипуляции данными делегируются инфраструктуре.  
 >*Этот уровень является главной, алгоритмической частью программы.*  
