--- a/_posts/design/2013-11-01-domain.md
+++ b/_posts/design/2013-11-01-domain.md
@@ -4,7 +4,7 @@ title: "Домен"
 categories: blog
 excerpt: "Почему же я всё чаще вижу как создаются приложения, где есть только \"entity\" и \"dto\"?"
 author: ratsam
-tags: [domain-driven, design]
+tags: [design]
 image:
   feature: so-simple-sample-image-2.jpg
   credit: WeGraphics
